Add daily tasmota latest release check

--- a/openhab2/services/addons.cfg
+++ b/openhab2/services/addons.cfg
@@ -29,7 +29,7 @@ package = minimal
 #legacy = true
 
 # A comma-separated list of bindings to install (e.g. "binding = sonos,knx,zwave")
-binding = mqtt
+binding = mqtt,http
 
 # A comma-separated list of UIs to install (e.g. "ui = basic,paper")
 #ui = 
