--- a/openhab2/services/addons.cfg
+++ b/openhab2/services/addons.cfg
@@ -23,28 +23,28 @@ package = minimal
 #
 #remote = true
 
-# Include legacy 1.x bindings. If set to true, it also allows the installation of 1.x bindings for which there is 
+# Include legacy 1.x bindings. If set to true, it also allows the installation of 1.x bindings for which there is
 # already a 2.x version available (requires remote repo access, see above). (default is false)
 #
 #legacy = true
 
 # A comma-separated list of bindings to install (e.g. "binding = sonos,knx,zwave")
-binding = mqtt,http
+binding = mqtt,http,exec
 
 # A comma-separated list of UIs to install (e.g. "ui = basic,paper")
-#ui = 
+#ui =
 
 # A comma-separated list of persistence services to install (e.g. "persistence = rrd4j,jpa")
-#persistence = 
+#persistence =
 
 # A comma-separated list of actions to install (e.g. "action = mail,pushover")
-#action = 
+#action =
 
 # A comma-separated list of transformation services to install (e.g. "transformation = map,jsonpath")
 transformation = jsonpath
 
 # A comma-separated list of voice services to install (e.g. "voice = marytts,freetts")
-#voice = 
+#voice =
 
 # A comma-separated list of miscellaneous services to install (e.g. "misc = myopenhab")
-#misc = 
+#misc =
