--- a/openhab2/services/addons.cfg
+++ b/openhab2/services/addons.cfg
@@ -26,7 +26,7 @@ package = minimal
 # Include legacy 1.x bindings. If set to true, it also allows the installation of 1.x bindings for which there is
 # already a 2.x version available (requires remote repo access, see above). (default is false)
 #
-#legacy = true
+legacy = true
 
 # A comma-separated list of bindings to install (e.g. "binding = sonos,knx,zwave")
 binding = mqtt,http,exec
