Upgrade to openhab 3

--- a/openhab/services/addons.cfg
+++ b/openhab/services/addons.cfg
@@ -10,27 +10,30 @@
 #
 # See https://www.openhab.org/docs/configuration/packages.html for a detailed explanation of these packages.
 #
-package = minimal
+package = standard
 
 # Access Remote Add-on Repository
 # Defines whether the remote openHAB add-on repository should be used for browsing and installing add-ons. (default is true)
 #
 #remote = true
 
-# A comma-separated list of bindings to install (e.g. "binding = sonos,knx,zwave")
+# A comma-separated list of automation services to install (e.g. "automation = groovyscripting")
+#automation =
+
+# A comma-separated list of bindings to install (e.g. "binding = knx,sonos,zwave")
 binding = mqtt
+
+# A comma-separated list of miscellaneous services to install (e.g. "misc = openhabcloud")
+#misc =
+
+# A comma-separated list of persistence services to install (e.g. "persistence = jpa,rrd4j")
+#persistence =
+
+# A comma-separated list of transformation services to install (e.g. "transformation = jsonpath,map")
+transformation = jsonpath
 
 # A comma-separated list of UIs to install (e.g. "ui = basic,habpanel")
 #ui =
 
-# A comma-separated list of persistence services to install (e.g. "persistence = rrd4j,jpa")
-#persistence =
-
-# A comma-separated list of transformation services to install (e.g. "transformation = map,jsonpath")
-transformation = jsonpath
-
-# A comma-separated list of voice services to install (e.g. "voice = marytts,freetts")
+# A comma-separated list of voice services to install (e.g. "voice = googletts,marytts")
 #voice =
-
-# A comma-separated list of miscellaneous services to install (e.g. "misc = myopenhab")
-#misc =
